--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build": "npm run clean && mkdirp lib/es6 && npm run build_es5 && npm run build_es6",
     "build_es5": "babel src/Connect.jsx --out-file lib/index.js --presets=react,es2015,stage-1",
     "build_es6": "babel src/Connect.jsx --out-file lib/es6/index.js --presets=react",
-    "clean": "rimraf lib"
+    "clean": "rimraf lib",
+    "clean:doc": "rimraf docs",
+    "jsdoc": "jsdoc -c jsdoc.conf.json",
+    "doc": "npm run clean:doc && npm run jsdoc"
   },
   "repository": {
     "type": "git",
@@ -30,7 +33,6 @@
   "dependencies": {
     "fluxxor": "^1.7.3",
     "lodash.foreach": "^4.5.0",
-    "lodash.isfunction": "^3.0.8",
     "lodash.merge": "^4.6.0",
     "lodash.reduce": "^4.6.0",
     "react": "^15.4.2"
@@ -41,6 +43,8 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.22.0",
+    "docdash": "^0.4.0",
+    "jsdoc": "^3.4.3",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.4"
   }
