--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "build_es6": "babel src/Connect.jsx --out-file lib/es6/index.js --presets=react",
     "clean:lib": "rimraf lib",
     "clean:doc": "rimraf docs",
-    "jsdoc": "jsdoc -c jsdoc.conf.json",
-    "doc": "npm run clean:doc && npm run jsdoc",
-    "lint" : "eslint **/src/** -o ./test/eslint.html -f html",
-    "lint:fix" : "eslint --fix **/src/** -o ./test/eslint.html -f html"
+    "jsdoc": "documentation build src/** -f html -o docs",
+    "doc": "npm run clean:doc && mkdir docs && npm run jsdoc",
+    "lint": "eslint **/src/** -o ./test/eslint.html -f html",
+    "lint:fix": "eslint --fix **/src/** -o ./test/eslint.html -f html"
   },
   "repository": {
     "type": "git",
@@ -45,13 +45,12 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.22.0",
-    "docdash": "^0.4.0",
+    "documentation": "^4.0.0-beta.18",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
-    "jsdoc": "^3.4.3",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.4"
   }
