--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "npm run build",
     "build": "npm run clean:lib && mkdirp lib/es6 && npm run build_es5 && npm run build_es6",
-    "build_es5": "babel src/Connect.jsx --out-file lib/index.js --presets=react,es2015,stage-1",
-    "build_es6": "babel src/Connect.jsx --out-file lib/es6/index.js --presets=react",
+    "build_es5": "cross-env BABEL_ENV=es5 babel src/Connect.jsx --out-file lib/index.js",
+    "build_es6": "cross-env BABEL_ENV=es6 babel src/Connect.jsx --out-file lib/es6/index.js",
     "clean:lib": "rimraf lib",
     "clean:doc": "rimraf docs",
     "jsdoc": "documentation build src/** -f html -o docs",
@@ -45,6 +45,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.22.0",
+    "cross-env": "^3.1.4",
     "documentation": "^4.0.0-beta.18",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
