--- a/.npmignore
+++ b/.npmignore
@@ -1,1 +1,16 @@
+#Same as .gitignore without build directory (lib/)
+
+# Project dependencies
 node_modules/
+
+# IDE
+.idea/
+
+# Jsdoc
+docs/
+
+# Eslint, etc..
+test/
+
+# NPM
+npm-debug.log
