--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   "dependencies": {
     "fluxxor": "^1.7.3",
     "lodash.foreach": "^4.5.0",
+    "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.0",
-    "lodash.pick": "^4.4.0",
     "lodash.reduce": "^4.6.0",
     "react": "^15.4.2"
   },
