--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "fluxxor": "^1.7.3",
     "lodash.foreach": "^4.5.0",
     "lodash.get": "^4.4.2",
+    "lodash.isboolean": "^3.0.3",
     "lodash.isequal": "^4.5.0",
+    "lodash.keys": "^4.2.0",
     "lodash.merge": "^4.6.0",
     "lodash.reduce": "^4.6.0",
     "react": "^15.4.2"
