--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "lodash.get": "^4.4.2",
     "lodash.isboolean": "^3.0.3",
     "lodash.isequal": "^4.5.0",
+    "lodash.isstring": "^4.0.1",
     "lodash.keys": "^4.2.0",
     "lodash.merge": "^4.6.0",
     "lodash.reduce": "^4.6.0",
+    "lodash.some": "^4.6.0",
     "react": "^15.4.2"
   },
   "devDependencies": {
