React ES6 and Fluxxor no longer required

--- a/.babelrc
+++ b/.babelrc
@@ -5,11 +5,17 @@
         "react",
         "es2015",
         "stage-1"
+      ],
+      "plugins": [
+        "transform-decorators-legacy"
       ]
     },
     "es6": {
       "presets": [
         "react"
+      ],
+      "plugins": [
+        "transform-decorators-legacy"
       ]
     }
   }
