--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   },
   "homepage": "https://github.com/gautier-lefebvre/fluxxor-connect#readme",
   "dependencies": {
-    "create-react-class": "^15.5.2",
-    "fluxxor": "^1.7.3",
+    "autobind-decorator": "^1.4.1",
     "lodash.foreach": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.isboolean": "^3.0.3",
@@ -44,11 +43,14 @@
     "lodash.merge": "^4.6.0",
     "lodash.reduce": "^4.6.0",
     "lodash.some": "^4.6.0",
+    "prop-types": "^15.5.10",
     "react": "^15.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.22.0",
@@ -59,6 +61,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
+    "glob": "^7.1.2",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.4"
   }
